--- a/style.css
+++ b/style.css
@@ -1,230 +1,284 @@
-*
-{
+/*reset my page*/
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-}
-body
-{
-    font-weight: 400;
-    font-family: Roboto,Arial,sans-serif;
+  }
+  /*general tags */
+  body {
+    font-weight:400px;
+    font-family: Roboto, Arial, sans-serif;
     color: #747474;
     height: 100vh;
-    position: relative;
     width: 100%;
-   
-}
-
-.logo-img
-{
-    width: 230px;
-    height: 35px;
-}
-.active
-{color: #14d2b9;}
-.docp-header
-{
-    display: flex;
-    justify-content:space-around;  
-    padding:20px;
-    margin: 0 auto;
-    position: relative;
-}
-ul li
-{
-    list-style: none;
-    display: inline-block;
-    margin: 0.8rem 1.5rem;
-}
-.nav-bar,.menu-docp
-{
-    display:flex;
-   
-}
-
-a
-{
-color: #747474;
-text-decoration: none;
-text-transform: capitalize;
-transition: 0.4s;
-}
-a:hover
-{
+  }
+  a {
+    color: #747474;
+    text-decoration: none;
+    text-transform: capitalize;
+    transition: 0.5s;
+  }
+  
+  p {
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    
+  }
+  a:hover {
     color: #14d2b9;
     cursor: pointer;
-}
-
-.menu-docp
-{   display: flex;
-    position: relative;
-}
-
-ul.dropdown-menu
-{
-    display: none;
+  }
+  /*header section*/
+  .logo-img {
+    width: 300px;
+    height: 100px;
+    margin:10px;  
+  }
+  .active {
+    color: #14d2b9;
+  }
+  .docp-header {
+    display: flex;
+    justify-content: space-evenly;
     padding: 10px;
+    margin: 0 auto;
+  }
+  ul li {
+    list-style: none;
+    display: inline-block;
+    margin: 20px;
+    padding: 10px;
+  }
+  .menu-docp {
+    display: flex;
+    position: relative;
+  }
+  ul.dropdown-menu {
+    display: none;
     position: absolute;
     width: 100%;
     padding-left: 0px;
     background: #fff;
     box-shadow: 0 5px 10px 0 #d3cfc9;
-    z-index: 1;
-}
-ul.dropdown-menu li
-{
+    z-index: 2;
+  }
+  ul.dropdown-menu li {
     display: block;
-    padding-top:30px;
-}
-ul li:hover ul.dropdown-menu
-{
+    padding-top:10px;
+  }
+  ul li:hover ul.dropdown-menu {
     display: block;
-}
-.introduction
-{
-    display:flex;
+  }
+  /*section 2 making the healthcare*/
+  .introduction {
+    display: flex;
     flex-direction: column;
-   align-items: center;
-   margin: 20px 0;
-}
-.intro-log
-{
+    justify-content:space-evenly;
+    align-items: center;
+    padding:5px;
+    margin-bottom: 20px;
+  }
+  .intro-log {
     display: block;
     margin: 0 auto;
-    width: 50px;
-    height: 50px;
-}
-
-.intro-title,h1
-{
-    display: flex;
-    text-align:center;
+    width: 100px;
+    height: 100px;
+  }
+  
+  .intro-title,h1 {
+    text-align: center;
     padding-top: 50px;
     font-weight: 200;
     letter-spacing: 0.5px;
     color: #00b39b;
-    padding:20;
-}
-.intro-text
-{
-    display: flex;
-
-}
-p
-{
-    margin: 10px;
-    padding: 5px;
-    line-height: 1.2;
-
-}
-.paragraph
-{
-    margin:0;
+    padding: 20;
+  }
+  .intro-text {
+    display:grid;
+  grid-template-columns: repeat(2, 1fr);
+  column-gap: 20px;
+  }
+ /*three cards section*/
+  .paragraph {
+    margin: 0;
     font-size: normal;
     color: #f2f6f9;
     line-height: 1.2;
     color: #ffffff;
-    padding-top: 20px;
-    padding-left: 5px;
-    line-height: 20px;
+    padding-top: 50px;
+    padding-left: 2px;
     display: block;
-    width: 100%;
-}
-.box
-{
+    width:100%;
+  }
+  .box {
     display: flex;
-    justify-content: space-between;
-}
-.cards
-{
-    padding:1.3rem 2rem;
-    border-radius:8%;
-    color:#fff;
-    margin:20px; 
-    width: 33.33%;
-    height: 345px;
-    display: flex;
-    flex-direction:column;
-    justify-content: space-evenly;
-}
-   
-.doctors
-{ background-color:#3dd2b9 ;}
-
-.patients
-{  background-color: #5390e2;}
-.clinics
-{  background-color:#1a2734 ;}
-.choose-country, .specialist-1,.specialist-2
-{
-   
-    position: relative;
-    display: inline-block;
-    background: none;
+    justify-content: center;
+    align-items:center;
+  }
+  .cards {
+    padding: 1.3rem 2rem;
+    border-radius: 5%;
     color: #fff;
+    margin: 15px;
+    width: 350px;
+    height: 380px;
+  }
+   .doctors {
+    background-color: #3dd2b9;
+   
+  }
+  
+  .patients {
+    background-color: #5390e2;
+  }
+  .clinics {
+    background-color: #1a2734;
+  }
+  .choose-country,
+  .specialist-1,
+  .specialist-2 {
+    position: relative;
+    background: none;
+    color:#fff;
     text-align: center;
-}
-
-.style-select select {
+    margin-top: 20px;
+    font-size:400px ;
+  }
+  
+  .style-select select {
     width: 100%;
     height: 40px;
+    border: 0vh;
     background: transparent;
-    border: 0;
     border-radius: 0;
     padding: 0 2em 0 0;
     -webkit-appearance: none;
     text-transform: capitalize;
     text-decoration: underline;
     cursor: pointer;
-    font-size: 1rem;
-    line-height: 1.2;
+    font-size: 1.2rem;
+    line-height:1;
 
-}
-option {
+    
+  }
+  option {
     font-weight: normal;
     display: block;
     min-height: 1.2em;
-    padding: 0;}
-img
-{
-    width: 2.5rem;
-    margin-right: 2.5rem;
-}
-.our-logos
-{
-    display: flex;
-}
-
-.logos
-{
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-}
-ul li img
-{
+    padding: 0;
+  }
+  /*logos section*/
+  .our-logos {
+    display:grid;
+    grid-template-columns: repeat(2,1fr);
+    column-gap: 50px;
+  }
+  .logos {
+    display:grid;
+    grid-template-columns:repeat(3,1fr);
+    width:400px;
+  }
+  .logos img {
     width: 100%;
     height: 100%;
-}
-.community
-{
-    display: flex;
+  }
+  /*community section*/
+  .community {
     background-color: #dbf7f6;
-}
-
-.our-comm
-{
     display: flex;
     justify-content:space-between;
+    margin-top: 0px;
+  }
+  .all {
+    justify-content:center;
+    align-items: center;
+    display: flex;
     flex-wrap: wrap;
+    margin-top: 0px; 
+    width: 1200px;  
+  }
+  .box-com {
+    margin: 20px;
+    width: 250px;
+    height: 100%;
+    background: #fff;
+    border-radius: 10px;
+    text-align: center;
+    padding: 15px;
+    box-shadow: 0 5px 10px 0 #d3cfc9;
+  }
+  /*lives improve live...*/
+  .lives 
+  {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    width: 500px;
+    margin: 0 auto;
+    margin-top: 5px;
+  }
+  /*cities section*/
+  .cities
+  {
+    padding-top: 0px;
+margin:auto;
+position:relative;
+display: grid;
+grid-template-columns:repeat(3,1fr);
+width: 900px;
+  }
+  .cities-box
+  {
+    margin: 20px;
+    box-shadow: -2px 0 8px #fff;
+    text-align: center;
+    background: #fff;
+    border-radius: 6px;
+    width:300px;
+    position:relative;
+    background-origin:padding-box;
+  }
+  .cities-box img{
+    border-radius: 6px;
+    width: 300px;
+    display: block;
+    color: #747474;
+    height: 300px;
+  }
+  .open {
+    display: inline-block;
+    border-radius: 10px;
+    padding: 15px;
+    background: #3d83df;
+    color: #fff;
+    font-weight: bold;
+    text-align: center;
+    text-transform: uppercase;
+    transition: 0.4s;
+    cursor: pointer;
+    margin-left:50px;
 }
-.box-com
-{
-width: 300px;
-background: #fff;
-border-radius: 5px;
-height: 250px;
-text-align: center;
-padding: 15px;
-   
+  /* join section*/
+  .join
+  {
+    text-align: center;
+    padding: 10px;
+    margin: 0 auto;
+
+}
+.join h1 {
+    font-size: 2.1428571429em;
+    color: #333;
+    margin-bottom: 0.75em;
+    margin:20px;
+}
+/*footer*/
+.footer {
+    text-align: center;
+    padding: 10px;
+
 }
